# read-doc

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: dependabot-prek.yaml  pr-checks.yaml
benches/: general.rs
include-docs-macro/: Cargo.toml
include-docs-macro/src/: lib.rs
src/: lib.rs
tests/: compile_errors.rs  compiles.rs  integration.rs  macro_output.rs  no_inner_docs.rs  output.rs
tests/compile_fail/: invalid_syntax.rs  invalid_syntax.stderr  missing_file.rs  missing_file.stderr  non_string.rs  non_string.stderr  two_missing_files.rs  two_missing_files.stderr
tests/doc_formats/: attr_docs.rs  block_docs.rs  line_docs.rs  mod.rs  no_docs.rs
tests/fruit/: apple.rs  mod.rs  orange.rs
