[package]
name = "include-docs-macro"
version = "0.1.0"
authors = ["Daniel Parks <oss-include-docs@demonhorse.org>"]
description = "Proc macro for include-docs"
license = "MIT OR Apache-2.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.44"
syn = { version = "2.0.114", features = ["full", "parsing"] }
